Force text color black in print to prevent invisible text

--- a/src/index.css
+++ b/src/index.css
@@ -544,6 +544,10 @@ html {
     height: auto !important;
     max-height: none !important;
     width: auto !important;
+    background: transparent !important;
+  }
+  * {
+    color: black !important;
   }
   .bulletins-container, .bulletin-classic-container, .bulletin-preview-container {
     background: transparent !important;
